# AgnosiaEngine

./: .gitignore  CMakeLists.txt  Flowgraph.puml  MainFlow.puml  Makefile  README.md  escher.blend  imgui.ini
.cache/clangd/index/: agnosiaimgui.cpp.C24FD8016426C1B2.idx  agnosiaimgui.cpp.D917B7EB41E8A56F.idx  agnosiaimgui.h.87696B000D0032E2.idx  agnosiaimgui.h.C442C0E7D513336B.idx  buffers.cpp.A3847497585D04F4.idx  buffers.cpp.FC2CC275D910BCB7.idx  buffers.h.CC15E40B6084C10D.idx  buffers.h.CDBDA48C4F52B5C1.idx  devicelibrary.cpp.A38843544ABCFBFE.idx  devicelibrary.cpp.A6A50BF3BD186A09.idx  devicelibrary.h.D7B097F0839961AC.idx  devicelibrary.h.EC0A88B5EA0F522E.idx  entrypoint.cpp.9286A9B0BD8A276E.idx  entrypoint.cpp.A53E0B0573FC92AB.idx  entrypoint.h.1BBE0276DA7F0CE2.idx  entrypoint.h.45651A082C1D1EC1.idx  global.cpp.DB8A6A1A4BC0BF3A.idx  (+61 more)
assets/models/: untitled.mtl
src/: DeviceLibrary.cpp  DeviceLibrary.h  agnosiaimgui.cpp  agnosiaimgui.h  assetcache.cpp  assetcache.h  devicelibrary.cpp  devicelibrary.h  entrypoint.cpp  entrypoint.h  global.cpp  global.h  main.cpp  types.h  utils.h
src/debug/: VulkanDebugLibs.cpp  VulkanDebugLibs.h  vulkandebuglibs.cpp  vulkandebuglibs.h
src/graphics/: buffers.cpp  buffers.h  graphicspipeline.cpp  graphicspipeline.h  material.cpp  material.h  model.cpp  model.h  pipelinebuilder.cpp  pipelinebuilder.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h
src/shaders/: base.frag  base.vert  common.glsl  fragment.frag  fullscreen.frag  fullscreen.vert  vertex.vert
src/utils/: deletion.h  helpers.h  types.h
